--- a/Pipfile
+++ b/Pipfile
@@ -5,11 +5,14 @@ verify_ssl = true
 
 [dev-packages]
 pytest = "*"
+autopep8 = "*"
 
 [packages]
 sqlalchemy = "*"
 restapi = {editable = true, path = "."}
 flask = "*"
+flask-cors="*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
