--- a/restapi/.vscode/settings.json
+++ b/restapi/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "python.languageServer": "Pylance",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": true,
     "python.linting.pylintArgs": ["--load-plugins", "pylint_flask_sqlalchemy", "pylint_flask"],
