Resolve #9, fix pagesize bug in result endpoint

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ restapi = {editable = true, path = "."}
 flask = "*"
 flask-cors="*"
 python-dotenv = "*"
+mysqlclient = "*"
 
 [requires]
 python_version = "3.8"
